# comet-hunter

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirement.txt  requirements.txt
architecture/: index.html
backend/: config.py  logging_config.py  main.py
backend/api/: dependencies.py  main.py  middleware.py  schemas.py
backend/core/: logging_config.py  request_context.py  storage.py
backend/jobs/: background_job_service.py  event_bus.py  event_models.py  exceptions.py  job.py  job_store.py  job_submission.py  runner.py
backend/pipeline/: models.py  pipeline.py  scheduler.py
backend/services/: download_file_service.py  metadata_service.py  process_file_service.py  slot_service.py
backend/util/: constants.py  enums.py  funcs.py
comet_hunter/: cli.py  launcher.py  process_store.py
database_schema/: index.html
docs/: DATABASE_SCHEMA.md  PROCESSING_PIPELINE.md  ROADMAP.md  architecture.md  database_schema.md  file_lifecycle.md  index.md  pipeline.md  processing_pipeline.md  roadmap.md
docs/architecture/: processed_file_lifecycle.drawio
docs/domain/: downlink_slot.md  file_metadata.md  processed_file.md
docs/infrastructure/: database_base.md  query_executor.md  query_spec.md
docs/lifecycle/: processed_file_lifecycle.drawio
docs/repositories/: downlink_slot_repository.md  file_metadata_repository.md  processed_file_repository.md
docs/services/: download_file_service.md  metadata_service.md  (+2 more)
file_lifecycle/: index.html
frontend/: app.py  config.py  streamlit_app.py
pipeline/: index.html
processing_pipeline/: index.html
roadmap/: index.html
search/: search_index.json
(+60 files in other folders)
