[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "comet-hunter"
version = "0.1.0"
description = "Astronomical image ingestion and processing system for Sungrazer project"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Anand Krishna" }
]

keywords = [
    "astronomy",
    "comet",
    "system-design",
    "processing-pipeline"
]

dependencies = [
    "fastapi>=0.136",
    "nicegui>=3.12",
    "requests>=2.34",
    "numpy>=2.4",
    "scipy>=1.17",
    "sunpy>=7.1",
    "pydantic>=2.13",
    "matplotlib>=3.10",
    "starlette>=1.2",
    "reproject>=0.19",
    "mpl_animators>=1.2",
    "tzdata>=2026.1"
]

[project.urls]
Repository = "https://github.com/AnandKri/comet-hunter"
Documentation = "https://anandkri.github.io/comet-hunter/"

[project.scripts]
comet-hunter = "comet_hunter.cli:main"

[tool.setuptools.packages.find]
include = [
    "backend*",
    "frontend*",
    "comet_hunter*"
]